@@ -3,4 +3,4 @@ set -xe
 
 OPTS="-DskipTests=true -Dbasepom.check.skip-all=true -Dbasepom.check.skip-javadoc=false -Dbasepom.check.fail-javadoc=true -B"
 
-exec mvn ${OPTS} verify
+MAVEN_OPTS=--illegal-access=permit exec mvn ${OPTS} verify
